# rusvelte

./: .gitignore  .prettierignore  CONTRIBUTING.md  Cargo.toml  README.md  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yaml  release_cargo.yaml
crates/derive-macro/: Cargo.toml
crates/derive-macro/src/: ast_tree.rs  lib.rs  oxc_span.rs
crates/rusvelte-parser/: Cargo.toml
crates/rusvelte-parser/src/: ast.rs  context.rs  error.rs  lib.rs
crates/rusvelte-parser/src/ast/: attribute.rs  directive.rs  element.rs  fragment.rs  script.rs  span_offset.rs  style_sheet.rs  tag.rs  text.rs
crates/rusvelte-parser/src/parse_impl/: element.rs  tag.rs  text.rs
crates/rusvelte-parser/tests/: snapshot.rs
crates/rusvelte-parser/tests/attributes/inputs/: attribute-class-directive.svelte
crates/rusvelte-parser/tests/attributes/snapshots/: snapshot__attributes__success@attribute-class-directive.svelte.snap  snapshot__attributes__success@attribute-containing-solidus.svelte.snap  snapshot__attributes__success@attribute-shorthand.svelte.snap  snapshot__attributes__success@attribute-spread.svelte.snap  snapshot__attributes__success@attribute-style-directive-modifiers.svelte.snap
crates/rusvelte-parser/tests/simple/: mod.rs
crates/rusvelte-parser/tests/simple/inputs/: closing-tag-omitted.svelte  comment.svelte
crates/rusvelte-parser/tests/simple/snapshots/: snapshot__simple__success@closing-tag-omitted.svelte.snap
crates/rusvelte_analyzer/: Cargo.toml
crates/rusvelte_analyzer/examples/: analyzer.rs
crates/rusvelte_analyzer/src/: binder.rs  binding.rs  lib.rs  node.rs  reference.rs  scope.rs  state.rs  symbol.rs  visit_js.rs  visit_svelte.rs
crates/rusvelte_analyzer/src/scope/: binder.rs  mod.rs  scope_builder.rs  visit_js.rs  visit_svelte.rs
crates/rusvelte_ast/: Cargo.toml
crates/rusvelte_ast/src/: ast_builder.rs  ast_kind.rs  lib.rs  visit.rs  visit_mut.rs
crates/rusvelte_ast/src/ast/: attribute.rs  block.rs  directive.rs  element.rs  fragment.rs  mod.rs  root.rs  script.rs  style_sheet.rs  tag.rs  text.rs
crates/rusvelte_ast/src/ast_builder/: js.rs  mod.rs  svelte.rs
crates/rusvelte_ast/src/traits/: extract_identifier.rs  get_ast_type.rs  get_fragment.rs  get_name.rs  mod.rs  take_fragment_nodes.rs  unwrap_pattern.rs
crates/rusvelte_derive/: Cargo.toml
crates/rusvelte_derive/src/: ast_node_id.rs  ast_tree.rs  lib.rs  oxc_span.rs
crates/rusvelte_parser/: Cargo.toml
crates/rusvelte_parser/examples/: parser.rs
crates/rusvelte_parser/src/: constants.rs  context.rs  error.rs  lib.rs  main.rs  regex_pattern.rs
crates/rusvelte_parser/src/parse_impl/: attribute.rs  block.rs  element.rs  fragment.rs  mod.rs  script.rs  style_sheet.rs  tag.rs  text.rs
crates/rusvelte_parser/tests/: snapshot.rs
crates/rusvelte_parser/tests/attributes/inputs/: attribute-bind-directive.svelte  attribute-class-directive.svelte  attribute-style-directive-modifiers.svelte
crates/rusvelte_parser/tests/attributes/snapshots/: snapshot__attributes__success@attribute-bind-directive.svelte.snap  snapshot__attributes__success@attribute-class-directive.svelte.snap  snapshot__attributes__success@attribute-containing-solidus.svelte.snap  snapshot__attributes__success@attribute-shorthand.svelte.snap  snapshot__attributes__success@attribute-spread.svelte.snap  snapshot__attributes__success@attribute-style-directive-modifiers.svelte.snap
crates/rusvelte_parser/tests/block/inputs/: await-block.svelte  each-block-array-pattern.svelte  each-block-else.svelte  each-block-obj-pattern.svelte  each-block-only-ts.svelte  (+5 more)
crates/rusvelte_transformer/: Cargo.toml
crates/rusvelte_transformer/examples/: transformer.rs
crates/rusvelte_transformer/src/: js.rs  lib.rs  svelte.rs
crates/rusvelte_transformer/src/svelte/: clean_nodes.rs  fragment.rs  mod.rs
crates/rusvelte_transformer/tests/: snapshot.rs
crates/rusvelte_transformer/tests/samples/simple/: client.snap  input.svelte
crates/rusvelte_transformer/tests/samples/simple-handler/: client.snap
crates/rusvelte_transformer/tests/snapshots/: snapshot__client@simple-handler.svelte.snap  snapshot__client@simple.svelte.snap
crates/rusvelte_utils/: Cargo.toml
crates/rusvelte_utils/src/: constants.rs  lib.rs  regex_pattern.rs  special_element.rs  void_element.rs
crates/rusvelte_wasm/: Cargo.toml
crates/rusvelte_wasm/src/: lib.rs
crates/svelte-parser/: Cargo.toml  README.md
crates/svelte-parser/src/: ast.rs  error.rs  lib.rs  main.rs  regex_pattern.rs  serialize.rs
crates/svelte-parser/src/ast/: attribute.rs  element.rs  fragment.rs  root.rs  script.rs  style_sheet.rs  tag.rs  text.rs
crates/svelte-parser/tests/: ast_snapshot.rs  snapshot.rs
crates/svelte-parser/tests/css/inputs/: css-pseudo-classes.svelte
crates/svelte-parser/tests/css/snapshots/: snapshot__css__success@css-nth-syntax.svelte.snap  snapshot__css__success@css-pseudo-classes.svelte.snap
crates/svelte-parser/tests/inputs/simple/: regular_element.svelte  text.svelte
crates/svelte-parser/tests/simple/: mod.rs
crates/svelte-parser/tests/simple/inputs/: implicit-close-tag.svelte
crates/svelte-parser/tests/simple/snapshots/: snapshot__simple__success@comment.svelte.snap  snapshot__simple__success@expression-tag.svelte.snap  snapshot__simple__success@expression_tag.svelte.snap  snapshot__simple__success@implicit-close-tag.svelte.snap  snapshot__simple__success@regular_element.svelte.snap  snapshot__simple__success@script.svelte.snap  snapshot__simple__success@text.svelte.snap  snapshot__simple__test@comment.svelte.snap  snapshot__simple__test@expression_tag.svelte.snap  snapshot__simple__test@regular_element.svelte.snap  snapshot__simple__test@script.svelte.snap  snapshot__simple__test@text.svelte.snap
crates/svelte-parser/tests/snapshots/: ast_snapshot__simple@comment.svelte.snap  ast_snapshot__simple@expression_tag.svelte.snap  ast_snapshot__simple@regular_element.svelte.snap  ast_snapshot__simple@text.svelte.snap
crates/utils/src/: html_tree_validation.rs
website/: package.json
website/src/: main.ts
(+38 files in other folders)
