
[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0.214" }
serde_json = { version = "1.0.132" }
oxc_allocator = { version = "0.36.0" }
oxc_ast = { version = "0.36.0", features = ["serialize"] }
oxc_parser = { version = "0.36.0" }
oxc_span = { version = "0.36.0" }
oxc_syntax = { version = "0.36.0" }
oxc_diagnostics = { version = "0.36.0" }
thiserror = { version = "2.0.1" }
htmlize = { version = "1.0.5" }
regex = { version = "1.11.1" }
quote = { version = "1.0.37" }
syn = { version = "2.0.87" }
proc-macro2 = { version = "1.0.89" }
insta = { version = "1.41.1" }
