[workspace]
members = ["crates/*"]
resolver = "2"

[patch.crates-io]
oxc_allocator = { git = "https://github.com/jason89521/oxc.git", branch = "rusvelte", package = "oxc_allocator" }
oxc_ast = { git = "https://github.com/jason89521/oxc.git", branch = "rusvelte", package = "oxc_ast" }
oxc_parser = { git = "https://github.com/jason89521/oxc.git", branch = "rusvelte", package = "oxc_parser" }
oxc_span = { git = "https://github.com/jason89521/oxc.git", branch = "rusvelte", package = "oxc_span" }
oxc_syntax = { git = "https://github.com/jason89521/oxc.git", branch = "rusvelte", package = "oxc_syntax" }
oxc_diagnostics = { git = "https://github.com/jason89521/oxc.git", branch = "rusvelte", package = "oxc_diagnostics" }
oxc_ecmascript = { git = "https://github.com/jason89521/oxc.git", branch = "rusvelte", package = "oxc_ecmascript" }
oxc_codegen = { git = "https://github.com/jason89521/oxc.git", branch = "rusvelte", package = "oxc_codegen" }

# for development
# oxc_allocator = { path = "../oxc/crates/oxc_allocator", package = "oxc_allocator" }
# oxc_ast = { path = "../oxc/crates/oxc_ast", package = "oxc_ast" }
# oxc_parser = { path = "../oxc/crates/oxc_parser", package = "oxc_parser" }
# oxc_span = { path = "../oxc/crates/oxc_span", package = "oxc_span" }
# oxc_syntax = { path = "../oxc/crates/oxc_syntax", package = "oxc_syntax" }
# oxc_diagnostics = { path = "../oxc/crates/oxc_diagnostics", package = "oxc_diagnostics" }

[workspace.dependencies]
serde = { version = "1.0.214" }
serde_json = { version = "1.0.132" }
oxc_allocator = { version = "0.44.0" }
oxc_ast = { version = "0.44.0", features = ["serialize"] }
oxc_parser = { version = "0.44.0" }
oxc_span = { version = "0.44.0" }
oxc_syntax = { version = "0.44.0" }
oxc_diagnostics = { version = "0.44.0" }
oxc_ecmascript = { version = "0.44.0" }
oxc_codegen = { version = "0.44.0" }
oxc_index = { version = "2.0.0" }
thiserror = { version = "2.0.1" }
htmlize = { version = "1.0.5" }
regex = { version = "1.11.1" }
quote = { version = "1.0.37" }
syn = { version = "2.0.87" }
proc-macro2 = { version = "1.0.89" }
insta = { version = "1.41.1" }
wasm-bindgen = "0.2.95"
serde-wasm-bindgen = "0.6.5"
bitflags = { version = "2.6.0" }

rusvelte_derive = { path = "crates/rusvelte_derive" }
rusvelte_utils = { path = "crates/rusvelte_utils" }
rusvelte_parser = { path = "crates/rusvelte_parser" }
rusvelte_ast = { path = "crates/rusvelte_ast" }
rusvelte_analyzer = { path = "crates/rusvelte_analyzer" }
rusvelte_transformer = { path = "crates/rusvelte_transformer" }
