[package]
name = "rusvelte_analyzer"
version = "0.0.1"
edition = "2021"

[dependencies]
rusvelte_ast = { workspace = true }
rusvelte_utils = { workspace = true }
oxc_index = { workspace = true }
oxc_syntax = { workspace = true }
oxc_span = { workspace = true }
oxc_allocator = { workspace = true }
oxc_ecmascript = { workspace = true }
bitflags = { workspace = true }

[dev-dependencies]
rusvelte_parser = { workspace = true }
