[package]
name = "svelte-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
oxc_allocator = { workspace = true }
oxc_ast = { workspace = true }
oxc_parser = { workspace = true }
oxc_span = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
oxc_syntax = { workspace = true }
oxc_diagnostics = { workspace = true }
thiserror = { workspace = true }
htmlize = { workspace = true, features = ["unescape"] }
regex = { workspace = true }
derive-macro = { path = "../derive-macro" }

[dev-dependencies]
insta = { workspace = true, features = ["json", "glob"] }
